white space no wrap issue

--- a/src/components/DragAndDropField/_dropDownField.module.scss
+++ b/src/components/DragAndDropField/_dropDownField.module.scss
@@ -51,6 +51,7 @@
 	max-width: 150px;
 	text-overflow: ellipsis;
 	overflow: hidden;
+	white-space: nowrap;
 }
 .fileThumbnail {
 	height: 8rem;
